@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.venom" version="4.0.1" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
+<addon id="plugin.video.venom" version="4.0.2" name="[COLOR red]Venom[/COLOR]" provider-name="Venom">
 	<requires>
 		<import addon="xbmc.python" version="2.19.0" />
 		<import addon="script.module.requests" version="2.19.1" />
@@ -34,11 +34,11 @@
 			<screenshot>resources/screenshots/screenshot003.jpg</screenshot>
 		</assets>
 		<news>
-[B][COLOR red]Update - v4.0.1 - July 30, 2020[/COLOR][/B]
-[COLOR yellow]--[/COLOR][I] Fixed pack file resolving when "Directory"
-    source select mode is chosen.[/I]
-[COLOR yellow]--[/COLOR][I] Fixed issue with TMDBHelper passing
-    plot that contains quotes.[/I]
+[B][COLOR red]Update - v4.0.2 - July 30, 2020[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Switched IMDb year check for titles to api request for
+    small 1/2-3/4 second savings to scrape startup.  Thanks
+    for the tip on that hidden api Mr.Anonymous!![/I]
+[COLOR yellow]--[/COLOR][I] Code cleanup of forgotten logging.[/I]
 		</news>
 	</extension>
 </addon>
